--- a/package.json
+++ b/package.json
@@ -2,20 +2,13 @@
   "name": "gettingstarted",
   "version": "1.0.1",
   "description": "A quickstart for the Flatfile platform.",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "dev": "flatfile develop workflows/project/index.ts",
     "update-env": "npx ts-node scripts/deploy/update-env.ts",
-    "deploy": "npx flatfile@latest deploy",
-    "production:project-listener": "npm run update-env production onboarding && npx flatfile@latest deploy workflows/project/index.ts",
-    "production:filefeed-listener": "npm run update-env production filefeed && npx flatfile@latest deploy workflows/filefeed/index.ts",
-    "production:dynamic-listener": "npm run update-env production dynamic && npx flatfile@latest deploy workflows/dynamic/index.ts",
-    "production:embedded-listener": "npm run update-env production embedded && npx flatfile@latest deploy workflows/embedded/index.ts",
+    "deploy:filefeed": "npm run update-env production filefeed && npx flatfile@latest index.ts",
     "create:env": "flatfile create:env -n",
-    "dev:project-listener": "npm run update-env dev onboarding && npx flatfile@latest develop workflows/project/index.ts",
-    "dev:filefeed-listener": "npm run update-env dev filefeed && npx flatfile@latest develop workflows/filefeed/index.ts",
-    "dev:dynamic-listener": "npm run update-env dev dynamic && npx flatfile@latest develop workflows/dynamic/index.ts",
-    "dev:embedded-listener": "npm run update-env dev embedded && npx flatfile@latest develop workflows/embedded/index.ts",
+    "dev:filefeed": "npm run update-env dev filefeed && npx flatfile@latest develop index.ts",
     "test": "jest --transform esm"
   },
   "keywords": [],
@@ -26,6 +19,7 @@
     "@flatfile/configure": "0.5.33",
     "@flatfile/hooks": "1.3.1",
     "@flatfile/listener": "0.3.9",
+    "@flatfile/plugin-automap": "^0.0.2",
     "@flatfile/plugin-record-hook": "0.1.10",
     "@flatfile/plugin-xlsx-extractor": "1.0.3",
     "actions": "^1.3.0",
