--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "axios": "^1.4.0",
     "chalk": "^5.2.0",
     "email-validator": "^2.0.4",
+    "files.com": "^1.0.310",
     "flatfile": "3.5.2",
     "fp-ts": "^2.15.0",
+    "fs-extra": "^11.1.1",
     "got": "^12.6.0",
     "io-ts": "^2.2.20",
     "moment": "^2.29.4",
