--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ansi-colors": "^4.1.3",
     "axios": "^1.4.0",
     "chalk": "^5.2.0",
+    "dotenv": "^16.3.1",
     "email-validator": "^2.0.4",
     "files.com": "^1.0.310",
     "flatfile": "3.5.2",
